--- a/test_slow_on_connect_workbench/shinyloadtest.Rmd
+++ b/test_slow_on_connect_workbench/shinyloadtest.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Set working directory to test folder by running below in console: 
 # setwd(paste0(getwd(),"/test_slow"))
-# setwd(paste0("C:/Users/19796/Documents/Git/Rstudio/demo_app_perf/test_slow"))
+# setwd(paste0("C:/Users/19796/Documents/Git/Rstudio/demo_app_perf/test_slow_on_connect_workbench"))
 
 ```
 
@@ -30,7 +30,7 @@ library(usethis)
 usethis::edit_r_environ()
 ```
 
-## Load testing
+## Create "Recording" of a typical user's interaction
 
 Test a single app that has been deployed to Connect. Use the URL from the "open solo" mode on Connect.  
  - Solo mode is important. This URL, when opened with developer options, doesn't work: `https://colorado.posit.co/rsc/connect/#/apps/bec1d4bc-2ab7-4ba3-9bd6-b9e336bf3ff9/access`
@@ -45,6 +45,10 @@ shinyloadtest::record_session(
 ```
 
 This generates a recording.log file which is the "typical user interacting with the app" which we will use for load testing. 
+
+Alternatively, we can programmatically create the recording using [shinytest2](https://rstudio.github.io/shinytest2/articles/use-application-audit.html?q=load%20test#load-testing-with-shinytest2). 
+
+## Install shinycannnon
 
 Download and install shinycannon: <https://rstudio.github.io/shinyloadtest/articles/shinycannon.html> 
 
@@ -81,6 +85,10 @@ Linux:
 echo $SHINYCANNON_CONNECT_API_KEY
 ```
 
+## Load testing
+
+The load testing will be run either from terminal or from R using the system or system2 commands to pass into the terminal. We will run the load test for simulating the number of simultaneous users, each time saving the results to a different folder. 
+
 Run the load test in terminal: 
 
 ```bash
@@ -100,7 +108,7 @@ connect_api_key = Sys.getenv("CONNECT_API_KEY")
 
 system(
   sprintf(
-    # "set SHINYCANNON_CONNECT_API_KEY=",
+    # "set SHINYCANNON_CONNECT_API_KEY=", #Change this if you are running on Windows
      "export SHINYCANNON_CONNECT_API_KEY=",
     connect_api_key
     )
@@ -129,10 +137,12 @@ library(dplyr)
 df <- load_runs(
   `1 user` = "run1",
   `5 users` = "run2"#,
-  #`50 users` = "run3"
+  #`15 users` = "run3"
 )
 
 shinyloadtest_report(df, "report.html")
 
 ```
+
+After running this, depending on your organizations security policies, it may help to open as a "preview" rather than in web browser (the error message will be something like "CORS restricted"). It may also be helpful to set self_contained = TRUE, or self_container = FALSE depending on any error messages encountered. 
 
